[package]
name = "byte_str"
version = "0.1.2"
authors = ["Eduardo Sánchez Muñoz <esm@eduardosm.net>"]
description = "Wrapper types around [u8] and Vec<u8> with similar functionality as str and String"
repository = "https://github.com/eduardosm/rust-byte_str"
license = "MIT/Apache-2.0"

[features]
no_std = []

[dependencies]
